--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "angular2-moment": "1.0.0-beta.1",
     "angular2-ui-switch": "^1.1.0",
     "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
+    "core-js": "^2.4.1",
     "d3": "^4.1.1",
     "d3-tip": "^0.6.7",
     "es6-shim": "^0.35.0",
@@ -48,13 +48,13 @@
     "lodash": "^4.8.2",
     "ng2-bootstrap": "^1.1.1",
     "rxjs": "5.0.0-beta.11",
-    "zone.js": "~0.6.12"
+    "zone.js": "~0.6.17"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.28",
     "@types/jasmine": "^2.2.29",
     "@types/jquery": "^1.10.31",
-    "@types/node": "^4.0.29",
+    "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "^2.44.26",
     "@types/source-map": "^0.1.26",
     "@types/uglify-js": "^2.0.27",
@@ -69,15 +69,14 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.21.0",
     "imports-loader": "^0.6.5",
-    "jasmine-core": "^2.5.0",
     "json-loader": "^0.5.4",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.7.0",
+    "karma-webpack": "1.8.0",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.10.0",
     "raw-loader": "0.5.1",
@@ -86,16 +85,16 @@
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.1",
-    "ts-node": "^0.9.1",
+    "ts-node": "^1.3.0",
     "tslint": "^3.7.1",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.4.4",
-    "typescript": "^2.0.0-beta",
+    "typescript": "^2.0.0",
     "typings": "^1.0.4",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
+    "webpack": "^2.1.0-beta.21",
+    "webpack-dev-server": "^2.1.0-beta.2",
     "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^0.14.0"
+    "webpack-merge": "^0.14.1"
   },
   "repository": {
     "type": "git",
