--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "climate-change-lab",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A climate change modelling data and graphical visualization lab by Azavea",
   "keywords": [
     "climate change lab",
@@ -24,53 +24,53 @@
   "private": true,
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "^4.4.7",
-    "@angular/common": "^4.4.7",
-    "@angular/compiler": "^4.4.7",
-    "@angular/core": "^4.4.7",
-    "@angular/forms": "^4.4.7",
-    "@angular/http": "^4.4.7",
-    "@angular/platform-browser": "^4.4.7",
-    "@angular/platform-browser-dynamic": "^4.4.7",
-    "@angular/router": "^4.4.7",
-    "@types/geojson": "^7946.0.5",
-    "bootstrap-sass": "^3.4.0",
-    "climate-change-components": "^0.4.0",
-    "core-js": "^2.6.4",
+    "@angular/animations": "^8.0.3",
+    "@angular/common": "^8.0.3",
+    "@angular/compiler": "^8.0.3",
+    "@angular/core": "^8.0.3",
+    "@angular/forms": "^8.0.3",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^8.0.3",
+    "@angular/platform-browser-dynamic": "^8.0.3",
+    "@angular/router": "^8.0.3",
+    "@types/geojson": "^7946.0.7",
+    "bootstrap-sass": "^3.4.1",
+    "climate-change-components": "file:climate-change-components-v0.4.0.tgz",
+    "core-js": "^3.1.4",
     "d3": "^4.13.0",
     "d3-tip": "^0.9.1",
-    "enhanced-resolve": "^3.4.1",
-    "jquery": "^3.3.1",
+    "enhanced-resolve": "^4.1.0",
+    "jquery": "^3.4.1",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.24.0",
-    "ng2-nouislider": "^1.6.2",
-    "ngx-bootstrap": "^2.0.5",
-    "ngx-clipboard": "^8.1.4",
-    "nouislider": "^10.1.0",
-    "rxjs": "^5.5.11",
-    "zone.js": "0.8.29"
+    "ng2-nouislider": "^1.8.2",
+    "ngx-bootstrap": "^5.0.0",
+    "ngx-clipboard": "^12.1.2",
+    "nouislider": "^14.0.1",
+    "rxjs": "^6.5.2",
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.2",
-    "@angular/compiler-cli": "^4.4.7",
-    "@angular/language-service": "^4.4.7",
-    "@types/googlemaps": "^3.30.16",
-    "@types/jasmine": "2.8.9",
-    "@types/jquery": "^3.3.29",
-    "@types/node": "~11.9.3",
-    "codelyzer": "~3.2.2",
-    "jasmine-core": "~2.9.1",
+    "@angular/cli": "8.0.4",
+    "@angular/compiler-cli": "^8.0.3",
+    "@angular/language-service": "^8.0.3",
+    "@types/googlemaps": "^3.36.5",
+    "@types/jasmine": "3.3.13",
+    "@types/jquery": "^3.3.30",
+    "@types/node": "~12.0.10",
+    "codelyzer": "~5.1.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.2",
-    "ts-node": "~3.3.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.6.1",
-    "webpack": "^3.12.0"
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.4.3",
+    "webpack": "^4.35.0"
   }
 }
