--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@angular/compiler": "^8.0.3",
     "@angular/core": "^8.0.3",
     "@angular/forms": "^8.0.3",
-    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "^8.0.3",
     "@angular/platform-browser-dynamic": "^8.0.3",
     "@angular/router": "^8.0.3",
@@ -48,9 +47,11 @@
     "ngx-clipboard": "^12.1.2",
     "nouislider": "^14.0.1",
     "rxjs": "^6.5.2",
-    "zone.js": "0.9.1"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.800.0",
     "@angular/cli": "8.0.4",
     "@angular/compiler-cli": "^8.0.3",
     "@angular/language-service": "^8.0.3",
@@ -58,7 +59,7 @@
     "@types/jasmine": "3.3.13",
     "@types/jquery": "^3.3.30",
     "@types/node": "~12.0.10",
-    "codelyzer": "~5.1.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
